backend ist jetzt vom vue frontend zu erreichen, Beispiel ist in Product.vue zu finden sowie apo.js im src ordner

--- a/storeitems/templates/storeitems/product_detail.html
+++ b/storeitems/templates/storeitems/product_detail.html
@@ -1,5 +1,11 @@
-{% block title %} Product {% endblock %}
-
-{% block content %}
-    Hier ist content
-{% endblock %}
+<!DOCTYPE html>
+<html>
+<head>
+    <title>{{ product.name }}</title>
+</head>
+<body>
+    <h1>{{ product.name }}</h1>
+    <p>{{ product.description }}</p>
+    <p>Price: {{ product.price }}</p>
+</body>
+</html>
