--- a/store/templates/store/frontpage.html
+++ b/store/templates/store/frontpage.html
@@ -16,20 +16,41 @@
         p {
             color: #7f8c8d;
         }
+        .product-grid {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 20px;
+        }
+        .product {
+            background-color: #ecf0f1;
+            border: 1px solid #bdc3c7;
+            border-radius: 10px;
+            padding: 20px;
+            width: 30%;
+            box-sizing: border-box;
+        }
+        .product h2 {
+            color: #2c3e50;
+        }
+        .product p {
+            color: #7f8c8d;
+        }
     </style>
 </head>
 <body>
     <h1>Willkommen im Store!</h1>
     <p>Hier findest du die besten Produkte für dich.</p>
-    {% block content %}
-        <div class ="flex">
-            {% for product in products %}
-                <div class="product w-1/3 bg-gray-200">
-                    {{ product.title }}
-                    {{  product.get_display_price }}€
-                </div>
-            {% endfor %}
-        </div>
-    {% endblock %}
+    <div class="product-grid">
+        {% for product in products %}
+            <div class="product">
+            <a href="{% url 'product_detail' product.slug %}">    
+                <h2>{{ product.title }}</h2>
+                <p>{{ product.get_display_price }}€</p>
+            </a>
+            </div>
+            
+        {% endfor %}
+    </div>
 </body>
 </html>
